--- a/sb-single-cmmnlib/gradle.properties
+++ b/sb-single-cmmnlib/gradle.properties
@@ -1,9 +1,17 @@
 #
-thisProjectName=sb2-single-web
-deployFileName=sb2-single-web.war
+thisProjectName=sb-single-cmmnlib
+deployFileExtension=.jar
 
 #
 localRepository=D:/zRepositoryForMaven
+#localRepository=/zRepositoryForMaven
+repositoryBaseUrl=http://192.168.0.24:8081
+repositorySuffixPublic=/repository/maven-public
+repositorySuffixRelease=/repository/maven-releases
+repositorySuffixSnapshot=/repository/maven-snapshots
+repositorySuffix3rdParty=/repository/3rd-party
+repositoryUsername=admin
+repositoryPassword=sonatype
 
 
 #
@@ -27,6 +35,11 @@ jettyClientVersion=11.0.12
 junitJupiterVersion=5.7.1
 lombokVersion=1.18.22
 mybatisSpringBootVersion=3.0.1
+
+# css, js minify plugin & js compiler
+webtoolsMinifyVersion=1.3.1
+closureCompilerVersion=v20220719
+
 
 # gradle options
 org.gradle.warning.mode=all
