--- a/sb-single-web/gradle.properties
+++ b/sb-single-web/gradle.properties
@@ -1,17 +1,9 @@
 #
-thisProjectName=sb2-single-cmmnlib
-deployFileExtension=.jar
+thisProjectName=sb-single-web
+deployFileName=sb-single-web.war
 
 #
 localRepository=D:/zRepositoryForMaven
-#localRepository=/zRepositoryForMaven
-repositoryBaseUrl=http://192.168.0.24:8081
-repositorySuffixPublic=/repository/maven-public
-repositorySuffixRelease=/repository/maven-releases
-repositorySuffixSnapshot=/repository/maven-snapshots
-repositorySuffix3rdParty=/repository/3rd-party
-repositoryUsername=admin
-repositoryPassword=sonatype
 
 
 #
@@ -35,11 +27,6 @@ jettyClientVersion=11.0.12
 junitJupiterVersion=5.7.1
 lombokVersion=1.18.22
 mybatisSpringBootVersion=3.0.1
-
-# css, js minify plugin & js compiler
-webtoolsMinifyVersion=1.3.1
-closureCompilerVersion=v20220719
-
 
 # gradle options
 org.gradle.warning.mode=all
