--- a/sb-single-web/build.gradle
+++ b/sb-single-web/build.gradle
@@ -189,7 +189,7 @@ dependencies {
     /** Database driver */
     // h2
     runtimeOnly 'com.h2database:h2'
-    implementation group: 'org.bgee.log4jdbc-log4j2', name: 'log4jdbc-log4j2-jdbc4.1', version: '1.16'
+    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
 
 }
 
